Add dark theme. Update README, pom, and css